--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Painel de vagas de empregos com back-end e front-end API RESTful.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js"
   },
   "keywords": [
     "painel",
@@ -15,6 +16,10 @@
   "author": "João Abner Pereira de Almeida",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
